--- a/css/add_poll.css
+++ b/css/add_poll.css
@@ -7,10 +7,12 @@
 
 /* Global Styles */
 body {
-  font-family: "Poppins", sans-serif;
+  font-size: 1.5rem;
   margin: 0;
   padding: 0;
-  font-size: 1.5rem;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Poll Container */
@@ -33,6 +35,7 @@ header h1 {
   padding: 1rem;
   display: flex;
   gap: 2rem;
+  border-radius: 2rem;
 }
 
 .uploaded-imgs {
