--- a/css/home_page.css
+++ b/css/home_page.css
@@ -1,13 +1,18 @@
 body {
-  /* height: 100vh; */
-  /* position: relative; */
   font-size: 1.5rem;
-  /* transition: all 0.3s; */
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-section {
+.container {
+  flex: 1;
   padding: 2rem;
   padding-top: 3rem;
+  padding-bottom: 7rem; /* Add extra padding to account for the nav bar */
+  /* filter: blur(3px); */
 }
 
 header {
@@ -19,6 +24,7 @@ header {
 
 header img {
   width: 4.5rem;
+  cursor: pointer;
 }
 
 .welcome-msg {
@@ -33,7 +39,7 @@ header img {
 
 .welcome-msg p {
   font-weight: 400;
-  color: rgb(201, 201, 201);
+  color: rgb(163, 163, 163);
   margin-left: 1rem;
 }
 
@@ -60,21 +66,17 @@ header img {
   padding: 1rem;
   background-color: #dbdbdb;
   font-weight: 500;
-
   margin-bottom: 4rem;
   transition: all 0.3s;
 }
 
-/* host info */
 .host-profile {
   display: flex;
   align-items: center;
   gap: 0.5rem;
   padding: 0.5rem 0.7rem;
   border-radius: 2rem;
-  width: -moz-fit-content;
   width: fit-content;
-
   background-color: #9e9e9e;
   margin-bottom: 2rem;
 }
@@ -88,13 +90,6 @@ header img {
   justify-content: center;
   border-radius: 50%;
 }
-
-/* .sender {
-  background-color: tomato;
-  padding: 2rem;
-  width: 10rem;
-  border-radius: ;
-  } */
 
 .available-poll h2 {
   font-size: 1.7rem;
@@ -144,7 +139,6 @@ header img {
   background-color: #dbdbdb;
   padding: 1rem;
   border-radius: 2rem;
-
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -152,7 +146,6 @@ header img {
 }
 
 .views {
-  /* font-size: 1.2rem; */
   padding: 2rem;
   border-radius: 2rem;
   background-color: #9e9e9e;
@@ -165,31 +158,10 @@ header img {
   background-color: #00000009;
 }
 
-.nav-bar {
-  background-color: #000;
-  width: 100%;
-  height: 5rem;
-  padding: 3rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.profile-popup {
   position: fixed;
-  bottom: 0;
-  left: 0;
-}
-
-.nav-bar img {
-  width: 3rem;
-  cursor: pointer;
-}
-
-.nav-active {
-  background-color: #9e9e9e;
-  width: 5rem;
-  height: 5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 100%;
-  cursor: pointer;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2000; /* Ensure the popup stays on top of everything */
 }
