--- a/css/voting_page.css
+++ b/css/voting_page.css
@@ -1,10 +1,11 @@
 /* Global Styles */
 body {
-  font-family: "Poppins", sans-serif;
+  font-size: 1.5rem;
   margin: 0;
   padding: 0;
-  position: relative;
-  font-size: 1.5rem;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Section Styles */
