--- a/css/voting_page.css
+++ b/css/voting_page.css
@@ -3,7 +3,7 @@ body {
   font-size: 1.5rem;
   margin: 0;
   padding: 0;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
 }
@@ -135,19 +135,12 @@ body {
 }
 
 .option {
-  /* font-size: 1.5rem;
-  margin-top: 1rem;
-  padding: 1.7rem;
-  border: 1px solid #00000041;
-  border-radius: 0.5rem;*/
-
-  /* font-size: 1.3rem; */
-  /* font-weight: 600; */
   padding: 2rem;
   border-radius: 2rem;
   background-color: #9e9e9e;
   cursor: pointer;
   text-align: left;
+  color: #000;
 }
 
 .option:active {
@@ -157,4 +150,17 @@ body {
 .option.selected {
   background-color: #00000076;
   /* border-color: #000; */
+}
+
+.submit-btn {
+  margin: 0 2rem;
+  padding: 2rem;
+  border-radius: 2rem;
+  background-color: #000;
+  cursor: pointer;
+  text-align: left;
+  color: #fff;
+
+  margin-top: 3rem;
+  text-align: center;
 }
